--- a/src/styles/_navleft-set1.scss
+++ b/src/styles/_navleft-set1.scss
@@ -3,43 +3,45 @@ body {
   @extend %system_normal--400;
 }
 
+.item-id {
+  background-color: #ccc;
+}
+
 // navleft1-01
 // ==================================================/
 @mixin navleft1-01 {
   .navleft1-01 {
-  a {
-  display: block;
-  color: #fff;
-  }
+    a {
+      display: block;
+      color: #fff;
 
-  li {
-  height: 34px;
-  border-bottom: 1px solid #000;
-  padding: 6px;
-
-  &:nth-of-type(odd) {
-    background-color: #666;
+      &:hover {
+        text-decoration: none;  
+      }
     }
 
-  &:last-of-type {
-    border-bottom: none;
+    li {
+      background-color: #000;  
+      height: 34px;
+      border-bottom: 1px solid #000;
+      padding: 6px;
+
+      &:nth-of-type(odd) {
+        background-color: #666;
+      }
+
+      &:first-of-type {
+        background-color: green;
+      }
+
+      &:last-of-type {
+        border-bottom: none;
+      }
     }
   }
-}
-  
-.navleft1-01-title {
-  font-weight: bold;
-  background-color: #000;
-  color: #000;
-}
 }
 
 @include navleft1-01;
 
 // 
 // ==================================================/
-  
-
-  
-
-  
