--- a/src/styles/_navleft-set1.scss
+++ b/src/styles/_navleft-set1.scss
@@ -43,5 +43,51 @@ body {
 
 @include navleft1-01;
 
-// 
+// navleft1-02
 // ==================================================/
+@mixin navleft1-02 {
+  .navleft1-02 {
+    a {
+      color: #fff;
+      display: block;
+      height: 50px;
+      padding-top: 14px;
+    }
+    
+    li {
+      border-bottom: 1px solid #000;
+      padding: 6px;
+
+      &:nth-of-type(odd) {
+        background-color: #666;
+      }
+
+      &:last-of-type {
+        border-bottom: none;
+      }
+    }
+  }
+
+  .navleft1-02_title {
+    font-weight: bold;
+    background-color: #000;
+    color: #000;
+  }
+
+  .navleft1-02_img-holder {
+    width: 50px;
+    height: 50px;
+    display: inline;
+    float: left;
+    margin-bottom: 4px;
+    margin-right: 4px;
+    padding: 4px;
+    border: 1px solid #000;
+
+    > img {
+      height: 100%;
+    }
+  }
+}
+
+@include navleft1-02;
