--- a/src/styles/_navleft-set1.scss
+++ b/src/styles/_navleft-set1.scss
@@ -53,7 +53,7 @@ body {
       height: 50px;
       padding-top: 14px;
     }
-    
+
     li {
       border-bottom: 1px solid #000;
       padding: 6px;
@@ -62,16 +62,14 @@ body {
         background-color: #666;
       }
 
+      &:first-of-type {
+        background-color: pink;
+      }
+
       &:last-of-type {
         border-bottom: none;
       }
     }
-  }
-
-  .navleft1-02_title {
-    font-weight: bold;
-    background-color: #000;
-    color: #000;
   }
 
   .navleft1-02_img-holder {
