--- a/src/styles/_navleft-set1.scss
+++ b/src/styles/_navleft-set1.scss
@@ -99,10 +99,76 @@ body {
 // navleft1-03
 // ==================================================/
 @mixin navleft1-03 {
-.navleft1-03 {
+  .navleft1-03 {
+    a {
+      color: #fff;
+      display: block;
+
+      &:hover {
+        text-decoration: none;  
+      }
+    }
+
+    li {
+      @extend %padd--6;
+      background-color: #999;
+      border-bottom: 1px solid #000;    
+
+      &:after,
+      &:before {
+        @extend %clearfix;
+      }
+
+      &:nth-of-type(odd) {
+        background-color: #666;
+      }
+
+      &:first-of-type {
+        background-color: green;
+      }
+
+      &:last-of-type {
+        border-bottom: none;
+      }
+    }
+  }    
+
+  .navleft1-03_img-holder {
+    width: 50px;
+    height: 50px;
+    display: inline;
+    float: left;
+    margin-bottom: 4px;
+    margin-right: 4px;
+    padding: 4px;
+    border: 1px solid #000;
+
+    > img {
+      height: 100%;
+    }
+  }
+}
+
+@include navleft1-03;
+
+// navleft1-04
+// ==================================================/
+@mixin navleft1-04 {
+// Horizontally and vertically centers block elements (andy.scss)
+// Important: you must have a parent element with `position: relative`.
+@mixin navleft1-04--center-both {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  @include prefix(transform, translate(-50%, -50%), 'webkit' 'ms');
+}
+
+.navleft1-04 {
   a {
     color: #fff;
     display: block;
+    height: 50px;
+    padding-top: 14px;
 
     &:hover {
       text-decoration: none;  
@@ -110,43 +176,35 @@ body {
   }
 
   li {
-    @extend %padd--6;
-    background-color: #999;
-    border-bottom: 1px solid #000;    
-
-    &:after,
-    &:before {
-      @extend %clearfix;
-    }
+    border-bottom: 1px solid #000;
+    padding: 6px;
 
     &:nth-of-type(odd) {
       background-color: #666;
     }
 
-    &:first-of-type {
-      background-color: green;
-    }
-
     &:last-of-type {
       border-bottom: none;
-    }
+    }  
   }
-}    
+}
 
-.navleft1-03_img-holder {
+.navleft1-04_img-holder {
   width: 50px;
   height: 50px;
   display: inline;
   float: left;
   margin-bottom: 4px;
   margin-right: 4px;
-  padding: 4px;
+  position: relative;
+  text-align: center;
   border: 1px solid #000;
 
-  > img {
-    height: 100%;
+  > span {
+    /* vertical center*/
+    @include navleft1-04--center-both;
   }
 }
 }
 
-@include navleft1-03;
+@include navleft1-04;
