--- a/src/styles/_navleft-set1.scss
+++ b/src/styles/_navleft-set1.scss
@@ -176,11 +176,16 @@ body {
   }
 
   li {
+    @extend %padd--6;
+    background-color: #999;
     border-bottom: 1px solid #000;
-    padding: 6px;
 
     &:nth-of-type(odd) {
       background-color: #666;
+    }
+
+    &:first-of-type {
+      background-color: green;
     }
 
     &:last-of-type {
@@ -201,9 +206,16 @@ body {
   border: 1px solid #000;
 
   > span {
-    /* vertical center*/
+    // placeholder for fa
     @include navleft1-04--center-both;
+    }
+
+  .fa {
+    background-color: #000;
+    width: 20px;
+    height: 20px;
   }
+
 }
 }
 
