--- a/src/styles/_sideNav1.scss
+++ b/src/styles/_sideNav1.scss
@@ -1,20 +1,7 @@
-// temp
-body {
-  @extend %system_normal--400;
-}
-
-h1 {
-  display: none;
-}
-
-.item-id {
-  background-color: #ccc;
-}
-
-// navleft1-01
+// navSide101
 // ==================================================/
-@mixin navleft1-01 {
-  .navleft1-01 {
+@mixin navSide101 {
+  .navSide101 {
     a {
       display: block;
       color: #fff;
@@ -46,12 +33,12 @@ h1 {
   }
 }
 
-@include navleft1-01;
+@include navSide101;
 
-// navleft1-02
+// navSide102
 // ==================================================/
-@mixin navleft1-02 {
-  .navleft1-02 {
+@mixin navSide102 {
+  .navSide102 {
     a {
       color: #fff;
       display: block;
@@ -82,7 +69,7 @@ h1 {
     }
   }
 
-  .navleft1-02_img-holder {
+  .navSide102_img-holder {
     @extend %padd--4;
     width: 50px;
     height: 50px;
@@ -98,12 +85,12 @@ h1 {
   }
 }
 
-@include navleft1-02;
+@include navSide102;
 
-// navleft1-03
+// navSide103
 // ==================================================/
-@mixin navleft1-03 {
-  .navleft1-03 {
+@mixin navSide103 {
+  .navSide103 {
     a {
       color: #fff;
       display: block;
@@ -137,7 +124,7 @@ h1 {
     }
   }    
 
-  .navleft1-03_img-holder {
+  .navSide103_img-holder {
     width: 50px;
     height: 50px;
     display: inline;
@@ -153,21 +140,21 @@ h1 {
   }
 }
 
-@include navleft1-03;
+@include navSide103;
 
-// navleft1-04
+// navSide104
 // ==================================================/
-@mixin navleft1-04 {
+@mixin navSide104 {
 // Horizontally and vertically centers block elements (andy.scss)
 // Important: you must have a parent element with `position: relative`.
-@mixin navleft1-04--center-both {
+@mixin navSide104--center-both {
   position: absolute;
   top: 50%;
   left: 50%;
   @include prefix(transform, translate(-50%, -50%), 'webkit' 'ms');
 }
 
-.navleft1-04 {
+.navSide104 {
   a {
     color: #fff;
     display: block;
@@ -198,7 +185,7 @@ h1 {
   }
 }
 
-.navleft1-04_img-holder {
+.navSide104_img-holder {
   width: 50px;
   height: 50px;
   display: inline;
@@ -211,7 +198,7 @@ h1 {
 
   > span {
     // placeholder for fa
-    @include navleft1-04--center-both;
+    @include navSide104--center-both;
     }
 
   .fa {
@@ -223,7 +210,7 @@ h1 {
 }
 }
 
-@include navleft1-04;
+@include navSide104;
 
 // navleft1-05
 // ==================================================/
