--- a/src/styles/_sideNav1.scss
+++ b/src/styles/_sideNav1.scss
@@ -3,19 +3,24 @@
 @mixin navSide101_theme() {
   .navSide101 {
     a {    
-      color: #fff;
+      color: #d5d5d5;
+
+      &:hover {
+        color: #fff;
+      }
+    }
+
+    .navSide101_heading {
+      background-color: #f0f0f0;
+      color: #141416;
     }
 
     li {
-      background-color: #000;  
-      border-bottom: 1px solid #000;
+      background-color: #2c2d32;  
+      border-bottom: 1px solid #5c5d60;
 
       &:nth-of-type(odd) {
-        background-color: #666;
-      }
-
-      &:first-of-type {
-        background-color: green;
+        background-color: #343437;
       }
     }
   }
@@ -50,7 +55,8 @@
 @mixin navSide102_theme() {
   .navSide102 {
     .navSide102_heading {
-      background-color: #fff;
+      background-color: #f0f0f0;
+      color: #141416;
     }
 
     a {
